# niftylog

./: ChangeLog  Doxyfile  Doxyfile.in  INSTALL  Makefile.am  NEWS  README  README.md  configure.ac  niftylog.pc.in  version  version.sh
debian/: README.source  changelog  changelog.in  control.tmpl.in  copyright  docs  libniftylog-dev.doc-base.in  libniftylog-dev.install  rules
distros/ubuntu/: create-ubuntu-deb
distros/ubuntu/debian/: README.Debian  changelog  control  copyright
doc/: Makefile.am
gentoo/dev-libs/niftylog/: metadata.xml  niftylog-9999.ebuild.in
include/: Makefile.am  log_version.h.in  logger-mechanism.h  logger-version.h.in  logger.h  nifty-primitives.h  niftylog.h
src/: Makefile.am  _mechanism-null.h  _mechanism-stderr.h  _mechanism-syslog.h  _mechanism.h  logger.c  mechanism-null.c  mechanism-stderr.c  mechanism-syslog.c  mechanism.c  version.c.in
tests/: Makefile.am  list_mechanisms.c  logging.c
