# libniftylog Makefile.am - v0.2 - Daniel Hiepler <daniel@niftylight.de>

SUBDIRS =

# name of directory to create inside /usr/include/ 
library_includedir = $(includedir)/lib$(PACKAGE)-$(PACKAGE_MAJOR_VERSION).$(PACKAGE_MINOR_VERSION)

# headers to install 
library_include_HEADERS = \
	niftylog.h \
	log_version.h \
	logger.h


