# libniftylog Makefile.am - v0.2 - Daniel Hiepler <daniel@niftylight.de>

SUBDIRS =

# name of directory to create inside /usr/include/ 
library_includedir = $(includedir)/lib$(PACKAGE)-$(PACKAGE_MAJOR_VERSION).$(PACKAGE_MINOR_VERSION)

# headers to install 
library_include_HEADERS = \
	nifty-primitives.h \
	niftylog.h \
	logger.h \
	logger-mechanism.h \
	logger-version.h



